# bazel-imagick

./: BUILD.bazel  Vagrantfile  WORKSPACE  go.mod  image_processing_test.go  main.go  vagrant-playbook.yml  webp.go  xmp.go
